--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "sequelize-cli": "^6.4.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0"
